Connected frontend to live backend

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ header.appbar{
 
 <script>
 /* CONFIG */
-const API_BASE = "http://localhost:4001";
+const API_BASE = "https://homestay-backend-ooi4.onrender.com/";
 /* HOMESTAYS - uses your images in homestay-frontend/images/ */
 const HOMESTAYS = [
   {
